@@ -96,8 +96,9 @@ CVS code -
   do_replace()
 	- Blank out last_replace properly again just before displaying
 	  the "Replace" prompt. (DLR, found by Mike Frysinger)
+	- Remove unnecessary renumber(). (DLR)
 - winio.c:
-  edit_scroll()
+  edit_scroll(), edit_refresh()
 	- Clean up and simplify. (DLR)
   do_statusbar_next_word()
 	- Rework to be more like do_statusbar_prev_word(), to avoid a
